WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
193495
[LFC][BFC] Inflow non-replaced used width should not be negative.
https://bugs.webkit.org/show_bug.cgi?id=193495
Summary
[LFC][BFC] Inflow non-replaced used width should not be negative.
alan
Reported
2019-01-16 09:06:20 PST
Guess it does not really make too much sense to have negative width (even if it breaks the 'margin-left' + 'border-left-width' + 'padding-left' + 'width' + 'padding-right' + 'border-right-width' + 'margin-right' = width of containing block constraint)
Attachments
Patch
(2.84 KB, patch)
2019-01-16 09:08 PST
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(3.25 KB, patch)
2019-01-16 16:01 PST
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2019-01-16 09:08:23 PST
Created
attachment 359268
[details]
Patch
alan
Comment 2
2019-01-16 16:01:12 PST
Created
attachment 359328
[details]
Patch
WebKit Commit Bot
Comment 3
2019-01-16 16:18:04 PST
Comment on
attachment 359328
[details]
Patch Clearing flags on attachment: 359328 Committed
r240093
: <
https://trac.webkit.org/changeset/240093
>
WebKit Commit Bot
Comment 4
2019-01-16 16:18:06 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5
2019-01-16 16:19:29 PST
<
rdar://problem/47333936
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug