[LFC][BFC] Inflow non-replaced used width should not be negative. https://bugs.webkit.org/show_bug.cgi?id=193495

Reviewed by Antti Koivisto.

Source/WebCore:

min-width (initial value 0) enforces non-negative used width.

* layout/blockformatting/BlockFormattingContext.cpp:
(WebCore::Layout::BlockFormattingContext::computeWidthAndMargin const):

Tools:

* LayoutReloaded/misc/LFC-passing-tests.txt:


Canonical link: https://commits.webkit.org/208022@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@240093 268f45cc-cd09-0410-ab3c-d52691b4dbfc